// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<tr
  data-project-key="project"
>
  <td
    className="thin"
  >
    <Checkbox
      checked={true}
      onCheck={[Function]}
      thirdState={false}
    />
  </td>
  <td
    className="nowrap"
  >
    <Link
      className="link-with-icon"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "id": "project",
          },
        }
      }
    >
      <QualifierIcon
        qualifier="TRK"
      />
       
      <span>
        Project
      </span>
    </Link>
  </td>
  <td
    className="thin nowrap"
  >
    <Connect(PrivacyBadge)
      qualifier="TRK"
      tooltipProps={
        Object {
          "projectKey": "project",
        }
      }
      visibility="private"
    />
  </td>
  <td
    className="nowrap hide-overflow"
    style={
      Object {
        "maxWidth": 400,
      }
    }
  >
    <span
      className="note"
    >
      project
    </span>
  </td>
  <td
    className="thin nowrap text-right"
  >
    <span
      className="note"
    >
      —
    </span>
  </td>
  <td
    className="thin nowrap"
  >
    <ProjectRowActions
      currentUser={
        Object {
          "login": "foo",
        }
      }
      project={
        Object {
          "key": "project",
          "name": "Project",
          "qualifier": "TRK",
          "visibility": "private",
        }
      }
    />
  </td>
</tr>
`;

exports[`renders 2`] = `
<tr
  data-project-key="project"
>
  <td
    className="thin"
  >
    <Checkbox
      checked={true}
      onCheck={[Function]}
      thirdState={false}
    />
  </td>
  <td
    className="nowrap"
  >
    <Link
      className="link-with-icon"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "id": "project",
          },
        }
      }
    >
      <QualifierIcon
        qualifier="TRK"
      />
       
      <span>
        Project
      </span>
    </Link>
  </td>
  <td
    className="thin nowrap"
  >
    <Connect(PrivacyBadge)
      qualifier="TRK"
      tooltipProps={
        Object {
          "projectKey": "project",
        }
      }
      visibility="private"
    />
  </td>
  <td
    className="nowrap hide-overflow"
    style={
      Object {
        "maxWidth": 400,
      }
    }
  >
    <span
      className="note"
    >
      project
    </span>
  </td>
  <td
    className="thin nowrap text-right"
  >
    <DateTooltipFormatter
      date="2017-04-08T00:00:00.000Z"
    />
  </td>
  <td
    className="thin nowrap"
  >
    <ProjectRowActions
      currentUser={
        Object {
          "login": "foo",
        }
      }
      project={
        Object {
          "key": "project",
          "lastAnalysisDate": "2017-04-08T00:00:00.000Z",
          "name": "Project",
          "qualifier": "TRK",
          "visibility": "private",
        }
      }
    />
  </td>
</tr>
`;
